Added links to source texts in MA, and expanded note to MA 55.

--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -93,7 +93,7 @@ The monks then accepted the teaching and listened.
 
 ### Notes
 
-1. {: #n1} This sūtra is a direct parallel to [AN 7.55](https://suttacentral.net/an7.55){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0427a13" target="_blank">T26.1.427a13-c24</a>. This <em>sūtra</em> is a direct parallel to [AN 7.55](https://suttacentral.net/an7.55){: target="_blank"}. [\[Back\]](#ref1)
 2. {: #n2} *stillness*. Lit. “stop making tracks” or “stand still.” [\[Back\]](#ref2)
 
 ---
