--- a/01_agama/madhyama/MA_007.md
+++ b/01_agama/madhyama/MA_007.md
@@ -11,7 +11,7 @@ next: MA_008.html
 ## Chapter 1: Sevens
 ### 7. Worldly Merit
 
-1\. Thus I have heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila’s Park.[\[1\]](#n1){: #ref1}
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila’s Park.[\[2\]](#n2){: #ref2}
 {:#p1}
 
 #### Seven Worldly Merits
@@ -22,7 +22,7 @@ next: MA_008.html
 3\. The Bhagavān told him, “It’s possible, Cunda. There are seven worldly merits that obtain great fortune, rewards, renown, and virtue. What are the seven? Cunda, there are faithful clansmen and clanswomen who give living quarters and meeting halls to an assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p3}
 
-4\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into the monks’ living quarters and give them seats, carpets, blankets, mattresses, and bedding.[\[2\]](#n2){:#ref2} This, Cunda, is the second worldly merit that obtains great fortune, rewards, renown, and virtue.
+4\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into the monks’ living quarters and give them seats, carpets, blankets, mattresses, and bedding.[\[3\]](#n3){:#ref3} This, Cunda, is the second worldly merit that obtains great fortune, rewards, renown, and virtue.
 {:#p4}
 
 5\. “Furthermore, Cunda, there are faithful clansmen and clanswomen who go into their living quarters and give them all new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, rewards, renown, and virtue.
@@ -89,9 +89,9 @@ Flowing into the ocean.”
 ---
 
 ### Notes
-
-1. {:#n1} *Ghoṣila Park*. P. ghositārāma. [\[back\]](#ref1)
-2. {:#n2} *carpets, blankets, mattresses*. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this. [\[back\]](#ref2)
+1. {:#n1}For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0427c25" target="_blank">T26.1.427c25-8c6</a>. [\[back\]](#ref1)
+1. {:#n2} <em>Ghoṣila Park</em>. P. ghositārāma. [\[back\]](#ref2)
+2. {:#n3} <em>carpets, blankets, mattresses</em>. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this. [\[back\]](#ref3)
 
 ---
 
