--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -174,7 +174,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 
 ### Notes
 
-1. {:#n1} Direct parallels to this sūtra include [MN 24](https://suttacentral.net/mn24){: target="_blank"} and EĀ 39.10. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0429c28" target="_blank">T26.1.429c28-31c12</a>. Direct parallels to this <em>sūtra</em> include [MN 24](https://suttacentral.net/mn24){: target="_blank"} and EĀ 39.10. [\[back\]](#ref1)
 2. {:#n2} *Veḷuvana monastery*. Ch. 竹林精舍. This location is unique in the Chinese Āgamas. It may well be identical to P. veḷuvana kalandakanivāpa, which occurs frequently in MĀ translated as a park (園). A late Song Āgama parallel to DĀ 8 appends monastery (精舍) to Veḷuvana Kalandaka, suggesting that at some point in history a monastery was erected there. [\[back\]](#ref2)
 3. {:#n3} *homeland*. This seems to refer to the Buddha’s homeland, which was that of the Śākya people. Otherwise, the conversation that occurs between the monks and the Buddha makes little sense. The Pāli tradition makes the same assumption in their commentaries. Given that a large part of the Buddha’s Saṅgha was from the Śākya clan, it would also make sense to call them “homeland monks.” [\[back\]](#ref3)
 4. {:#n4} *Dark Forest*. C. 安陀林 (MC. anda forest = G. \*andhavana), P/S. Andhavana. The name of this forest near Śrāvastī was interpreted in different ways. P/S. *andha* had the basic reading of “blind,” but like English “blind” could sometimes be used to mean a dark place where a person can’t see (e.g., a blind alley). “Dark” or “gloomy” is the reading indicated for this passage in one of the Chinese glossaries (cf. T2130.54.1046c17), and I’ve translated accordingly. There is also a passage found at T1440.23.531c1 that corroborates this as the Sarvāstivāda reading of the name. There are, however, at least two other readings evident in Buddhist sources: “Blind Man’s Forest” (Theravāda) and “Regained Vision Forest” (Kāśyapīya). Both are backed by stories about robbers who were punished by having their eye’s put out. [\[back\]](#ref4)
