--- a/01_agama/madhyama/MA_011.md
+++ b/01_agama/madhyama/MA_011.md
@@ -90,7 +90,7 @@ next: MA_015.html
 
 ### Notes
 
-1. {:#n1} The direct parallel for this sūtra is [AN 3.100](https://suttacentral.net/an3.100){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0433a12" target="_blank">T26.1.433a12-4a11</a>. The direct parallel for this <em>sūtra</em> is [AN 3.100](https://suttacentral.net/an3.100){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
