--- a/01_agama/madhyama/MA_015.md
+++ b/01_agama/madhyama/MA_015.md
@@ -103,7 +103,7 @@ The monks answered, “No, Bhagavān. Why is that? They wouldn’t commit bad de
 
 ### Notes
 
-1. {:#n1} The direct parallels for this sūtra are [AN 10.217](https://suttacentral.net/an10.217){: target="_blank"}-[219](https://suttacentral.net/an10.219){: target="_blank"} and EĀ 48.1. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0437b24" target="_blank">T26.1.437b24-8b11</a>. The direct parallels for this <em>sūtra</em> are [AN 10.217](https://suttacentral.net/an10.217){: target="_blank"}-[219](https://suttacentral.net/an10.219){: target="_blank"} and EĀ 48.1. [\[back\]](#ref1)
 
 ---
 
