--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -139,7 +139,7 @@ next: MA_017.html
 
 ### Notes
 
-1. {:#n1} The direct parallel for this sūtra is [AN 3.65](https://suttacentral.net/an3.65){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0438b13" target="_blank">T26.1.438b13-9c22</a>. The direct parallel for this <em>sūtra</em> is [AN 3.65](https://suttacentral.net/an3.65){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}*country of the Kālāmas*. Ch 伽藍, MCh k’ie-lam, P/Skt Kālāma. The Taisho reads 園 (“park”), which appears to be an error. I’ve adopted an alternate reading of 國 (“country”). \\
 *\*Keśaputra*. Ch. 羇舍子, MCh. kɪĕ-ʃɪă-putra, P. Kesamutta. The Chinese is a partial transliteration (子 typically translates P. putta, S. putra). I’ve not located a S. attestation for this place name, so I’ve tentatively reconstructed it given typical Chinese transliterations. [\[back\]](#ref2)
 3. {:#n3}*causes that are pre-existent*. Ch. 因習本有. I suspect that 因習 translates a verb equivalent to P. uppajjati (“to arise, come into being”), which is found in the P. parallel. 本有 usually means “inherent existence,” but here with the functional meaning of “pre-existing.” The verb 因習 is apparently the participial adjective (“arising pre-existent”), making the expression awkward, but I believe it basically means “pre-existing cause.”
