--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -80,7 +80,7 @@ Gāminī answered, “No, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} The direct parallel for this sūtra is [SN 42.6](https://suttacentral.net/sn42.6){: target="_blank"}. This version differs mainly in having a different opening narrative, depicting a god approaching the Buddha with a question rather than the headman of a village. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0439c23" target="_blank">T26.1.439c23-40c13</a>. The direct parallel for this <em>sūtra</em> is [SN 42.6](https://suttacentral.net/sn42.6){: target="_blank"}. This version differs mainly in having a different opening narrative, depicting a god approaching the Buddha with a question rather than the headman of a village. [\[back\]](#ref1)
 
 ---
 
