--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -256,7 +256,7 @@ Of suffering, formation, cessation, and the path.”
 ---
 
 ### Notes
-1. {:#n1} The direct parallel for this sūtra is [MN 141](https://suttacentral.net/mn141){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0467a28" target="_blank">T26.1.467a28-9c8</a>. The direct parallel for this <em>sūtra</em> is [MN 141](https://suttacentral.net/mn141){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
