--- a/01_agama/madhyama/MA_042.md
+++ b/01_agama/madhyama/MA_042.md
@@ -65,7 +65,7 @@ The Bhagavān replied, “Ānanda, the lack of desire has the purpose of causing
 
 ### Notes
 
-1. {: #n1} This sūtra is parallel with [AN 11.1](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0485a13" target="_blank">T26.1.485a13-b17</a>. This <em>sūtra</em> is parallel with [AN 11.1](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
