--- a/01_agama/madhyama/MA_043.md
+++ b/01_agama/madhyama/MA_043.md
@@ -60,7 +60,7 @@ next: MA_044.html
 
 ### Notes
 
-1. {: #n1} This sūtra is parallel with [AN 11.2](https://suttacentral.net/an11.2){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0485b19" target="_blank">T26.1.485b19-c20</a>. This <em>sūtra</em> is parallel with [AN 11.2](https://suttacentral.net/an11.2){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
