--- a/01_agama/madhyama/MA_044.md
+++ b/01_agama/madhyama/MA_044.md
@@ -27,7 +27,7 @@ next: MA_045.html
 
 ### Notes
 
-1. {: #n1} This sūtra is parallel with [AN 8.81](https://suttacentral.net/an8.81){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0485c22" target="_blank">T26.1.485c22-6a3</a>. This <em>sūtra</em> is parallel with [AN 8.81](https://suttacentral.net/an8.81){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
