--- a/01_agama/madhyama/MA_045.md
+++ b/01_agama/madhyama/MA_045.md
@@ -27,7 +27,7 @@ next: MA_046.html
 
 ### Notes
 
-1. {: #n1} This sūtra is parallel with [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. It’s similar to AN 7.65 because it’s point of departure is conscience and modesty, but it uses the larger list from AN 11.1 and lacks the tree metaphors. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486a05" target="_blank">T26.1.486a5-19</a>. This <em>sūtra</em> is parallel with [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. It’s similar to AN 7.65 because it’s point of departure is conscience and modesty, but it uses the larger list from AN 11.1 and lacks the tree metaphors. [\[Back\]](#ref1)
 
 ---
 
