--- a/01_agama/madhyama/MA_055.md
+++ b/01_agama/madhyama/MA_055.md
@@ -165,6 +165,15 @@ They answered, “Liberation is its cultivation.”
 
 ---
 
+### Notes
+
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0490b29" target="_blank">T26.1.490b29-1a12</a>. This <em>sūtra</em> has a parallel at [SN 12.23](https://suttacentral.net/sn12.23){: target="_blank"}. The two parallel lists are a little different, but both share the same feature of placing suffering as the pivot point between dependent origination and the process of salvation. I.e., suffering is the endpoint of the twelve steps of dependent origination and the starting point of practice towards liberation.<br/>
+This idea is presented by beginning with salvation and working backward to ignorance, passing through both lists along the way. This creates a chiastic (i.e., symmetrical) structure with suffering as the pivot. SN 12.23 preserves a perfectly balanced chiasmus, whereas this version in MĀ 55 has unbalanced it by adding steps to the process of salvation. This, in itself, is evidence of later expansion.<br/>
+A careful comparison of the list found here and the one in SN 12.23 reveals two differences. This list begins with <em>nirvāṇa</em>, while the Pali <em>sutta</em> begins with the knowledge of the contaminants being ended. Also, this version expands the link between joy and faith to better explain the causal relationship: faith -> right thinking -> right mindfulness -> guarding the faculties -> guarding the precepts -> no regrets -> gladness -> joy.<br/>
+The notion of suffering as both the root cause of awakening and the ultimate effect of ignorance must have been somewhat popular, as we can find it in later Mahāyāna texts as well. It formed the basis for the argument that all sentient beings will eventually be saved because suffering is the root motivation for awakening when conditions become right for its development. [\[Back\]](#ref1)
+
+---
+
 Translator: Charles Patton
 {: .translator}
 Last Revised: 28 March 2024
