Added source text links to footnotes

--- a/01_agama/madhyama/MA_047.md
+++ b/01_agama/madhyama/MA_047.md
@@ -27,7 +27,7 @@ next: MA_048.html
 
 ### Notes
 
-1. {: #n1} This sūtra is a concise version of [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486b23" target="_blank">T26.1.486b23-c1</a>. This <em>sūtra</em> is a concise version of [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
