--- a/01_agama/madhyama/MA_048.md
+++ b/01_agama/madhyama/MA_048.md
@@ -39,7 +39,7 @@ next: MA_049.html
 
 ### Notes
 
-1. {: #n1} This sūtra is a concise version of [AN 11.4](https://suttacentral.net/an11.4){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486c03" target="_blank">T26.1.486c3-19</a>. This <em>sūtra</em> is a concise version of [AN 11.4](https://suttacentral.net/an11.4){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
