--- a/01_agama/madhyama/MA_049.md
+++ b/01_agama/madhyama/MA_049.md
@@ -27,7 +27,7 @@ next: MA_050.html
 
 ### Notes
 
-1. {: #n1} The closest Pali parallel to this sūtra is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but this list has additional steps. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486c21" target="_blank">T26.1.486c21-7a13</a>. The closest Pali parallel to this <em>sūtra</em> is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but this list has additional steps. [\[Back\]](#ref1)
 
 ---
 
