--- a/01_agama/madhyama/MA_051.md
+++ b/01_agama/madhyama/MA_051.md
@@ -130,7 +130,7 @@ They answered, “Good people are its cultivation.”
 
 ### Notes
 
-1. {: #n1} The closest Pali parallel to this sūtra is [AN 10.62](https://suttacentral.net/an10.62){: target="_blank"}, but it lacks the metaphor of rain. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0487b03" target="_blank">T26.1.487b3-c22</a>. The closest Pali parallel to this <em>sūtra</em> is [AN 10.62](https://suttacentral.net/an10.62){: target="_blank"}, but it lacks the metaphor of rain. [\[Back\]](#ref1)
 
 ---
 
