--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -83,7 +83,7 @@ The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddh
 
 ### Notes
 
-1. {:#n1} This sūtra is a parallel to [AN 9.3](https://suttacentral.net/an9.3){: target="_blank"} and [Ud 4.1](https://suttacentral.net/ud4.1){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0491a14" target="_blank">T26.1.491a14-2a11</a>. This <em>sūtra</em> is a parallel to [AN 9.3](https://suttacentral.net/an9.3){: target="_blank"} and [Ud 4.1](https://suttacentral.net/ud4.1){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} *Jantu*. C. 闍鬪村 (EMC. ʒɪă-təu = \*Jatu[ṇa]). P/S. Jantu is properly G. Jaṃtu but [attested in fragments](https://gandhari.org/dictionary/ja%E1%B9%83tu) as G. Jadu, Jatuṇa, and Jaduṇa. This may be a case of consonants being transposed in G. sources (Brough, 50), and the ending syllable being silent. I’ve adopted the S. equivalent. [\[back\]](#ref2)
 3. {:#n3} *Meghiya*. C. 彌醯 (EMC. miĕhei = \*Mehi), P. *Meghiya*, G. *Mekhiya*. In G., *gh* frequently becomes *kh*, but the consonants *g/k* are often weakened to fricatives or go silent. The result is that *-k-* can become *-y-* (Brough, 86), and *-kh-* can become *-h-* (Brough, 93). This scenario matches the C. transliteration (\*Mehi[ya]), so I’ve adopted the S. equivalent. For a summary of Meghiya’s background, see the [Buddhist Dictionary of Pali Proper Names](https://www.palikanon.com/english/pali_names/me_mu/meghiya.htm){: target="_blank"}. [\[back\]](#ref3)
 4. {:#n4} *Kimba River*. C. 金鞞河 (EMC. \*Kiṃba River), P. *kimikāḷāya nadiyā*, G. ?. There’s no attestation for G. *Kiṃba* in G. sources yet, but S. *Kimba* is a kind of tree. I’ve adopted this as an educated guess. [\[back\]](#ref4)
