--- a/01_agama/madhyama/MA_058.md
+++ b/01_agama/madhyama/MA_058.md
@@ -27,7 +27,7 @@ next: MA_072.html
 
 ### Notes
 
-1. {:#n1} Parallels to this sūtra are [SN 46.42](https://suttacentral.net/sn46.42){:target="_blank"}, EĀ 39.7, SĀ 12.18-19 (721-722), and T38. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0493a10" target="_blank">T26.1.493a10-22</a>. Parallels to this <em>sūtra</em> are [SN 46.42](https://suttacentral.net/sn46.42){:target="_blank"}, EĀ 39.7, SĀ 12.18-19 (721-722), and T38. [\[back\]](#ref1)
 
 ---
 
