--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -625,7 +625,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 
 ### Notes
 
-1. {: #n1} Parallels to this sūtra are [MN 128](https://suttacentral.net/mn128){: target="_blank"}, [Theravāda Vinaya, Khandhaka 10](https://suttacentral.net/pli-tv-kd10){: target="_blank"}, and [EĀ 24.8](https://suttacentral.net/ea24.8){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0532c09" target="_blank">T26.1.532c9-9b10</a>. Parallels to this <em>sūtra</em> are [MN 128](https://suttacentral.net/mn128){: target="_blank"}, [Theravāda Vinaya, Khandhaka 10](https://suttacentral.net/pli-tv-kd10){: target="_blank"}, and [EĀ 24.8](https://suttacentral.net/ea24.8){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
