--- a/01_agama/madhyama/MA_073.md
+++ b/01_agama/madhyama/MA_073.md
@@ -92,7 +92,7 @@ next: MA_074.html
 ---
 
 ### Notes
-1. {: #n1} The direct parallel for this sūtra is [AN 8.64](https://suttacentral.net/an8.64){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0539b19" target="_blank">T26.1.539b19-40c16</a>. The direct parallel for this <em>sūtra</em> is [AN 8.64](https://suttacentral.net/an8.64){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
