--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -140,7 +140,7 @@ That parinirvāṇa without remainder.”
 ---
 
 ### Notes
-1. {: #n1} The direct parallel with this sūtra is [AN 8.30](https://suttacentral.net/an8.30){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0540c18" target="_blank">T26.1.540c18-2b1</a>. The direct parallel with this <em>sūtra</em> is [AN 8.30](https://suttacentral.net/an8.30){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
