--- a/01_agama/madhyama/MA_075.md
+++ b/01_agama/madhyama/MA_075.md
@@ -100,7 +100,7 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 ---
 
 ### Notes
-1. {: #n1} The direct parallel for this sūtra is [MN 106](https://suttacentral.net/mn106){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0542b03" target="_blank">T26.1.542b3-3b28</a>. The direct parallel for this <em>sūtra</em> is [MN 106](https://suttacentral.net/mn106){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
