--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -101,7 +101,7 @@ next: MA_077.html
 ---
 
 ### Notes
-1. {: #n1} Direct parallels for this sūtra include [AN 8.63](https://suttacentral.net/an8.63){: target="_blank"} and [SN 47.3](https://suttacentral.net/sn47.3){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0543c01" target="_blank">T26.1.543c1-4b19</a>. Direct parallels for this <em>sūtra</em> include [AN 8.63](https://suttacentral.net/an8.63){: target="_blank"} and [SN 47.3](https://suttacentral.net/sn47.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
