--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -205,7 +205,7 @@ Aniruddha and the others accepted the teaching and listened.
 
 ### Notes
 
-1. {: #n1} The direct parallel to this sūtra is [MN 68](https://suttacentral.net/mn68){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0544b21" target="_blank">T26.1.544b21-6c29</a>. The direct parallel to this <em>sūtra</em> is [MN 68](https://suttacentral.net/mn68){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
