--- a/01_agama/madhyama/MA_079.md
+++ b/01_agama/madhyama/MA_079.md
@@ -197,7 +197,7 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 
 ### Notes
 
-1. {: #n1} The direct parallel of this sūtra is [MN 127](https://suttacentral.net/mn127){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0549b03" target="_blank">T26.1.549b3-51c24</a>. The direct parallel of this <em>sūtra</em> is [MN 127](https://suttacentral.net/mn127){: target="_blank"}. [\[Back\]](#ref1)
 2. {: #n2} *Ṛṣidatta*. This name is translated to Chinese as “Sagely Other” or perhaps “Sagely Heretic.” The name also appears in MĀ 213, which is paralleled in Pali (MN 89) as Isidatta. The character in both sources is depicted as someone involved in King Pasenadi’s government. Given that the Chinese typically translated rṣi as “Sage,” I’ve chosen the Sanskrit version of Isadatta, but the original may have had a different suffix than -datta. The Pali parallel for this sūtra has instead a carpenter named Pañcakaṅga as the layperson who invited Anuruddha to a meal. [\[back\]](#ref2)
 3. {: #n3} *True Kātyāyana*. The Pāli parallel has this monk’s name as Abhiya Kaccāna, but the Chinese here seems to suggest Satya Kātyāyana. Not having a Sanskrit attestation, I’ve left it translated. [\[back\]](#ref3)
 
