--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -252,7 +252,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 ### Notes
 
-1. {:#n1} While this *sūtra* doesn’t appear to have a direct Pali parallel, much of Aniruddha’s discourse (para. 16-55) parallels material found in Pali sources such as [MN 27](https://suttacentral.net/mn27){: target="_blank"} and [AN 4.198](https://suttacentral.net/an4.198){: target="_blank"}. [\[Back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0551c26" target="_blank">T26.1.551c26-4c1</a>. While this <em>sūtra</em> doesn’t appear to have a direct Pali parallel, much of Aniruddha’s discourse (para. 16-55) parallels material found in Pali sources such as [MN 27](https://suttacentral.net/mn27){: target="_blank"} and [AN 4.198](https://suttacentral.net/an4.198){: target="_blank"}. [\[Back\]](#ref1)
 2. {:#n2} *Salaḷa Peak*. This is an educated guess based on the Chinese transliteration. This location doesn’t appear to be known in other sources. Presumably, this was a height with a craggy peak with salaḷa trees on it not far from Śrāvastī. [\[Back\]](#ref2)
 3. {:#n3} *physical forms* (色像). Throughout MĀ, this term is used to denote the physical shape and appearance of various beings, especially gods. Paired with the expression “to receive birth” (受生), it seems to mean birth as a being. [\[Back\]](#ref3)
 
