--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -242,7 +242,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 
 ### Notes
 
-1. {: #n1} The direct parallel with this sūtra is [MN 119](https://suttacentral.net/mn119){: target="_blank"}. [\[Back\]](#ref3)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0554c10" target="_blank">T26.1.554c10-7c12</a>. The direct parallel with this <em>sūtra</em> is [MN 119](https://suttacentral.net/mn119){: target="_blank"}. [\[Back\]](#ref3)
 
 ---
 
