--- a/01_agama/madhyama/MA_082.md
+++ b/01_agama/madhyama/MA_082.md
@@ -105,7 +105,7 @@ Citra’s friends answered, “No. Why is that? After a night has passed and the
 
 ### Notes
 
-1. {: #n1} The direct parallel for this sūtra is [AN 6.60](https://suttacentral.net/an6.60){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0557c17" target="_blank">T26.1.557c17-9b25</a>. The direct parallel for this <em>sūtra</em> is [AN 6.60](https://suttacentral.net/an6.60){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
