--- a/01_agama/madhyama/MA_083.md
+++ b/01_agama/madhyama/MA_083.md
@@ -89,7 +89,7 @@ Venerable Maudgalyāyana said to the Bhagavān, “Indeed, Bhagavān!”
 
 ### Notes
 
-1. {: #n1} This *sūtra*’s parallels include [AN 7.61](https://suttacentral.net/an7.61){: target="_blank"}, T47, and EĀ 19.3. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0559b27" target="_blank">T26.1.559b27-60b13</a>. This <em>sūtra</em>’s parallels include [AN 7.61](https://suttacentral.net/an7.61){: target="_blank"}, T47, and EĀ 19.3. [\[Back\]](#ref1)
 2. {:#n2}*the village \*Kalyāṇamitra*. Ch. 善知識村, P. Kallavāḷamuttagāma. The Chinese translates the village’s name with the common and well-known rendering of *kalyāṇamitra* (“good friend”). Since the pronunciation is similar to the Pali parallel, I’ve adopted it.
 
 ---
