--- a/01_agama/madhyama/MA_084.md
+++ b/01_agama/madhyama/MA_084.md
@@ -63,7 +63,7 @@ next: MA_085.html
 
 ### Notes
 
-1. {:#n1} The parallel to this sūtra is AN 10.72. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0560b22" target="_blank">T26.1.560b22-1a18</a>. The parallel to this <em>sūtra</em> is AN 10.72. [\[back\]](#ref1)
 2. {:#n2} *tall pagoda*. C. 高樓臺觀. Lit. “high tower terrace for observation.” “Belvedere” might also translate the idea well enough. The Pali parallel has *kūṭāgārasāla*. *\*Markaṭa River.* C. 獼猴江. Lit. “Monkey River.” The Pali instead places the location in the Great Forest (*Mahāvana*). [\[back\]](#ref2)
 3. {:#n3} Several of these names are only educated guesses: *\*Aryabhadra. C. 賢善. Lit. “Worthy Good.” *\*Aryariṣṭa.* C. 賢患. Lit. “Worthy Trouble.” \*Yaśottara. C. 上稱. Lit. “Superior Fame.” The others seem clear enough: *Cāla.* C. 遮羅, EMC. tʃɪă-la = G. \*Cala. *Upacāla.* C. 優簸遮羅, EMC. ɪəu-pua-tʃɪă-la = G. \*Upacala. *Ariṣṭa.* C. 無患. Lit. “Untroubled.” *Yaśas*. C. 耶舍, EMC. yiă-ʃɪă = G. Yaśa. [\[back\]](#ref3)
 4. {:#n4} AN 10.72 has a much more prosaic explanation for the disturbance made by the Licchavis: Their carts made a ruckus as they arrived to visit the Buddha. Perhaps that seemed too small a thing to disturb such great disciples. [\[back\]](#ref4)
