--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -190,7 +190,7 @@ next: MA_101.html
 
 ### Notes
 
-1. {: #n1} Direct parallels to this sūtra are [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [DN 22](https://suttacentral.net/dn22){: target="_blank"}. Note also the overlap with [MN 119](https://suttacentral.net/mn119){: target="_blank"} and [MĀ 81](MA_081.html){: target="_blank"} regarding the mindfulness of body practices. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0582b07" target="_blank">T26.1.582b7-4b28</a>. Direct parallels to this sūtra are [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [DN 22](https://suttacentral.net/dn22){: target="_blank"}. Note also the overlap with [MN 119](https://suttacentral.net/mn119){: target="_blank"} and [MĀ 81](MA_081.html){: target="_blank"} regarding the mindfulness of body practices. [\[Back\]](#ref1)
 
 ---
 
