--- a/01_agama/madhyama/MA_101.md
+++ b/01_agama/madhyama/MA_101.md
@@ -108,7 +108,7 @@ They answered, “No.”
 
 ### Notes
 
-1. {: #n1} The direct parallel to this sūtra is [MN 20](https://suttacentral.net/mn20){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0588a03" target="_blank">T26.1.588a3-9a9</a>. The direct parallel to this <em>sūtra</em> is [MN 20](https://suttacentral.net/mn20){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
