--- a/01_agama/madhyama/MA_127.md
+++ b/01_agama/madhyama/MA_127.md
@@ -43,7 +43,7 @@ That yield great merits when given gifts.”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel to AN 2.35, SĀ 48.13 (992), and EĀ 42.8 [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0616a05" target="_blank">T26.1.616a5-25</a>. This <em>sūtra</em> is parallel to AN 2.35, SĀ 48.13 (992), and EĀ 42.8 [\[back\]](#ref1)
 2. {:#n2} The names that follow represent an outline of progress in realization up to but not including the arhat. It becomes apparent that the list has grown from five to eighteen when we compare it to Pali parallels (cf. MN 70). In the Pali tradition, practitioners progressing through the four fruits of ascetics up to the non-returners were all considered self-realizers (身證, *kāyasakkhi*), but they’ve been added to this list. To this, the five kinds of non-returner parinirvāṇas are also added, which brings this list of trainees to sixteen. A sixth and seventh stage has been inserted after the self-realizers to make it eighteen: those born from one good family to another two or three more times (家家, *kolaṃkolo*), and once-returners born in the human world (一種, *ekabījī*). See MN 70 & MĀ 195 for passages that interpret the first five stages. See SN 48.24 and AN 3.88 for glosses of the sixth and seventh stages. [\[back\]](#ref2)
 3. {:#n3} The first seven adepts in this list adds one to the six kinds of arhats found in later Sarvāstivāda Abhidharma (e.g. in the *Abhidharma Hṛdaya* by Upaśānta at T1551.28.851a1). Huiyuan (慧遠, 334–416 CE) discusses this passage in his *Encyclopedia of Mahāyāna Doctrine* (大乘義章, T1851.44.797a24), explaining the addition of the non-retreating adept (不退法) as a result of splitting the imperturbable adept (不動法) into a present and future attainment. Someone has also inserted a parenthetical comment directly into the list in an apparent attempt to explain the added item. It’s quite possible that not retreating was a spurious addition to begin with, and both these explanations are retrospective rationalizations. [\[back\]](#ref3)
 
