--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -211,7 +211,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 ---
 
 ### Notes
-1. {:#n1} This sūtra is parallel to [MN 27](https://suttacentral.net/mn27){: target="_blank"}. A large part (§ [18-56](#p18)) of this sūtra is also parallel with MĀ 80 (§ [14-43](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p14){: target="_blank"} and § [55](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p55){: target="_blank"}) and a couple other MĀ sūtras that recite the gradual path. The main difference between these two sūtras is that MĀ 80 gives a full description of the supernormal powers, while MĀ 146 gives a full description of the four dhyānas. This material is itself parallel to the stock description of a monk’s training found in several Pali suttas including MN 27. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0656a14" target="_blank">T26.1.656a14-8a27</a>. This <em>sūtra</em> is parallel to [MN 27](https://suttacentral.net/mn27){: target="_blank"}. A large part (§ [18-56](#p18)) of this sūtra is also parallel with MĀ 80 (§ [14-43](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p14){: target="_blank"} and § [55](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p55){: target="_blank"}) and a couple other MĀ sūtras that recite the gradual path. The main difference between these two sūtras is that MĀ 80 gives a full description of the supernormal powers, while MĀ 146 gives a full description of the four dhyānas. This material is itself parallel to the stock description of a monk’s training found in several Pali suttas including MN 27. [\[back\]](#ref1)
 2. {:#n2} The Chinese translates his name as “Born Hearing” (生聞), which agrees with the P. Jāṇussoṇi, but I have not found a S. attestation for this name yet. [\[back\]](#ref1)
 
 ---
