--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -289,7 +289,7 @@ He answered, “No, Gautama.”
 ---
 
 ### Notes
-1. {:#n1} This sūtra is a close parallel with MN 75.\\
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0670a26" target="_blank">T26.1.670a26-3a24</a>. This <em>sūtra</em> is a close parallel with MN 75.<br/>
 *Bhāradvāja*. C. 婆羅婆 (MC. bua-la-bua > \*Bharva? > G. Bharadvaya). As is often the case, C. translit. drops the final syllable, and *Bharvaya* is attested in a G. [fragment](https://gandhari.org/dictionary/bharadvaya). In MN 75, this is a clan name rather than a personal name.\\
 *most quiet abode.* C. 第一靜室. Unsure of the Indic equivalent, I’ve rendered  this expression freely. The lit. meaning is “the best quiet abode.” In Pali, the Buddha was staying in a hut for conducting Brahmanical fire rituals (P. *agyāgāra*). [\[back\]](#ref1)
 2. {:#n2} *Kalmāṣadamya.* C. 釰摩瑟曇 (MC. kɪʌm-mua-ṣɛt-dəm > G. \*Kaṃmaṣadam-?), P. Kammāsadamma, S. Kalmāṣadamya. I’ve found no attestation in G. for this placename, but the C. is a reasonable approx. of what it might have sounded like. [\[back\]](#ref2)
