--- a/01_agama/madhyama/MA_176.md
+++ b/01_agama/madhyama/MA_176.md
@@ -11,7 +11,7 @@ next: MA_186.html
 ## Chapter 14: Mind
 ### 176. Dhyāna Practitioners
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {:#p1}
 
 2\. It was then that the Bhagavān told the monks, “The world in truth has four kinds of dhyāna practitioner. What are the four? Some dhyāna practitioners are waxing but say that they are waning. Some dhyāna practitioners are waning but say that they are waxing. Some dhyāna practitioners are waning, and they truly know that they are waning. Some dhyāna practitioners are waxing, and they truly know that they are waxing.
@@ -203,6 +203,11 @@ next: MA_186.html
 
 62\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p62}
+
+---
+
+### Notes
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0713c21" target="_blank">T26.1.713c21-6b11</a>. The Pali parallel to this <em>sūtra</em> is <a href="https://suttacentral.net/mn44" target="_blank">MN 44</a>. [\[back\]](#ref1)
 
 ---
 
