--- a/01_agama/madhyama/MA_186.md
+++ b/01_agama/madhyama/MA_186.md
@@ -78,7 +78,7 @@ The monks then accepted the teaching and listened.
 ---
 
 ### Notes
-1. {: #n1} The direct Pali parallels is [MN 47](https://suttacentral.net/mn47){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0731a29" target="_blank">T26.1.731a29-2a8</a>. The direct Pali parallels is [MN 47](https://suttacentral.net/mn47){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
