--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -287,7 +287,7 @@ The monks replied, “No, Bhagavān.”
 ---
 
 ### Notes
-1. {:#n1} Parallels include for this sutra include [MN 22](https://suttacentral.net/mn22){: target="_blank"} (complete), [SĀ 35.1](../../../01_agama/samyukta/35/SA35_1.html){: target="_blank"} (six abodes of views), [EĀ 43.5](../../../04_ekottarika/EA_43_5.html){: target="_blank"} (parable of the raft), and [EĀ 50.8](../../../04_ekottarika/EA_50_8.html){: target="_blank"} (parable of the snake). [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0763b01" target="_blank">T26.1.763b1-6b26</a>. Parallels include for this <em>sūtra</em> include [MN 22](https://suttacentral.net/mn22){: target="_blank"} (complete), [SĀ 35.1](../../../01_agama/samyukta/35/SA35_1.html){: target="_blank"} (six abodes of views), [EĀ 43.5](../../../04_ekottarika/EA_43_5.html){: target="_blank"} (parable of the raft), and [EĀ 50.8](../../../04_ekottarika/EA_50_8.html){: target="_blank"} (parable of the snake). [\[back\]](#ref1)
 
 ---
 
