--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -280,7 +280,7 @@ That’s never been turned in the world before.’
 ---
 
 ### Notes
-1. {:#n1} Parallels to this sutra include MN 26, MN 85, SN 6.1, SN 56.11, DN 14, EA 19.1, EA 24.5, T 109, and T 765.2.23. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0775c07" target="_blank">T26.1.775c7-8c7</a>. Parallels to this <em>sūtra</em> include MN 26, MN 85, SN 6.1, SN 56.11, DN 14, EA 19.1, EA 24.5, T 109, and T 765.2.23. [\[back\]](#ref1)
 2. {:#n2} *Raṃbhaka*. This Skt. attestation for P. Rammaka is found in SHT 1332+1476. [\[back\]](#ref2)
 
 ---
