--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -259,7 +259,7 @@ The nun Dharmadinnā answered, “Madam, you’re asking about an endless subjec
 ---
 
 ### Notes
-1. {:#n1} The Pali parallel to this sūtra is <a href="https://suttacentral.net/mn44" target="_blank">MN 44</a>. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0788a14" target="_blank">T26.1.788a14-90b6</a>. The Pali parallel to this <em>sūtra</em> is <a href="https://suttacentral.net/mn44" target="_blank">MN 44</a>. [\[back\]](#ref1)
 2. {:#n2} *laywoman Viśākhā*. Some sources, such as MN 44 and the later *Mahāvibhāṣā* translation by Xuanzang, have a man named Viśākha as Dharmadinnā’s interlocutor, but there are also sources that agree with this version. Some sources say the laywoman Viśākhā had a husband named Viśākha, and others say it was Dharmadinnā who had a husband (or nearly married a man) by this name. These backstories appear to have become a bit confused over time, though they all agree on Viśākha as the name of the interlocutor (just not on the name’s gender). [\[back\]](#ref2)
 3. {:#n3} *oneself*. Ch. 自身, Skt. svakāya, P. sakkāya. A literal reading of the Chinese might be ‘own body,’ but as we shall see, it’s defined as equivalent to a person or individual that includes all five aggregates. [\[back\]](#ref3)
 4. {:#n4} *proliferating aggregates*. Ch. 盛陰, P. upādāna-khandha. 盛 was an early translation of upādāna in the expression P. upādāna-khandha. In normal contexts, 盛 has positive meanings like “flourishing, prosperous, waxing.” I take it here to mean something that multiplies or accumulates. [\[back\]](#ref4)
